# agentsflow

./: .gitignore  .pdm-python  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  agents.py  components.json  config.py  main.py  nx.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  start_server.py  test.py  tsconfig.base.json  tsconfig.json  websocket_test.py
agentsflow/: initialize.py
apps/agentsflow/: jest.config.ts  project.json  tsconfig.json
apps/agentsflow-e2e/: project.json
apps/agentsflow-e2e/src/e2e/: app.cy.ts
apps/agentsflow/.next/: app-build-manifest.json  trace
apps/agentsflow/.next/server/: _error.js  client-reference-manifest.js  client-reference-manifest.json  flight-server-css-manifest.js  flight-server-css-manifest.json  next-font-manifest.js  next-font-manifest.json  webpack-runtime.js
apps/agentsflow/.next/server/pages/: _app.js  _document.js  _error.js
apps/agentsflow/.next/types/app/: layout.ts  page.ts
apps/agentsflow/app/: layout.tsx  page.tsx
apps/agentsflow/app/components/: navigation.tsx
apps/agentsflow/app/components/dashboard/: settings-form.tsx  side-bar.tsx
apps/agentsflow/app/components/ui/: command.tsx  dialog.tsx  form.tsx  scroll-area.tsx  select.tsx  tabs.tsx  textarea.tsx  themeSwitcher.tsx  toast.tsx  toaster.tsx  tooltip.tsx  use-toast.ts
apps/api/: README.md  __init__.py  project.json  pyproject.toml  server.py  start_server.py
apps/api/agentsflow/agents/: __init__.py  ws_user_proxy.py
apps/api/api/: hello.py  server.py
apps/api/tests/: test_hello.py
apps/frontend/: .eslintrc.json  README.md  postcss.config.js  project.json  tailwind.config.js  tsconfig.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/components/: navigation.tsx
apps/frontend/app/lib/: store.ts
apps/frontend/app/ws/: page.tsx
autogen_client/: config.py  initialize.py  util.py
autogen_client/agents/: __init__.py  ws_assistant.py  ws_user_proxy.py
autogenui/: package.json  pnpm-lock.yaml
autogenui/app/: layout.tsx  page.tsx
autogenui/components/: navigation.tsx
frontend/: index.html
frontend_src/: README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend_src/app/: layout.tsx  page.tsx
frontend_src/components/: navigation.tsx
frontend_src/components/dashboard/: settings-form.tsx  side-bar.tsx
frontend_src/components/dashboard/agent_sheet/: chat.tsx  settings.tsx  sheet.tsx
frontend_src/components/dashboard/flow/: agent-form.tsx  flow-sidebar.tsx  flow.tsx
frontend_src/components/ui/: scroll-area.tsx
frontend_src/lib/: store.ts
libs/: .eslintrc.json  project.json  tsconfig.json  tsconfig.lib.json
libs/src/: index.ts
libs/src/components/: index.ts
libs/src/components/ui/: avatar.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  tabs.tsx  textarea.tsx  themeSwitcher.tsx  toast.tsx  tooltip.tsx
reports/apps/api/unittests/: junit.xml
rest/: init.http
static/: 404.html  index.html  index.txt  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  ws.html  ws.txt
static/_next/static/chunks/: 58-5c9a78d20ea5e625.js  c37d3baf-cab00dad89b97314.js  main-26215e657fde9846.js  main-app-56918dc4c407bea0.js  webpack-ee3c2f0d31a632e9.js
static/_next/static/css/: 746979941d5e4495.css
static/app/: page.tsx
static/app/ws/: page.tsx
static/components/dashboard/: chat.tsx  customNode.tsx  flow.tsx  flowSidebar.tsx  sideBar.tsx
static/components/dashboard/flow/: custom-node.tsx  flow-sidebar.tsx  flow.tsx  flowSidebar.tsx
static/lib/: store.ts
templates/: index.html
ui/: pnpm-lock.yaml
ui/app/: layout.tsx  page.tsx
ui/components/: navigation.tsx
ui/components/dashboard/: chat.tsx
ui/components/ui/: themeSwitcher.tsx
workspace/: README.md
(+42 files in other folders)
