[project]
name = ""
version = ""
description = ""
authors = [
    {name = "TomExMachina", email = "tom@firesight.ai"},
]
dependencies = [
    "fastapi>=0.103.2",
    "pyautogen>=0.1.6",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.23.2",
    "jinja2>=3.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

